CMAKE_MINIMUM_REQUIRED(VERSION 3.28)

SET(VERSION_MAJOR 1)
SET(VERSION_MINOR 0)
SET(VERSION_PATCH 0)
SET(VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})

PROJECT(AlgorithmsDataStructures VERSION ${VERSION} LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(CORE_PROJECT_NAME ${PROJECT_NAME}Core)
SET(CORE_PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/Core/include)

SET(TEST_PROJECT_NAME ${PROJECT_NAME}Test)

ADD_SUBDIRECTORY(Core)
ADD_SUBDIRECTORY(Test)