CMAKE_MINIMUM_REQUIRED(VERSION 3.26)

PROJECT(${TEST_PROJECT_NAME} VERSION 1.0.0 LANGUAGES CXX)

SET(HEADER_FILES
		Include/IntegerPredicates.hpp)

SET(SOURCE_FILES
		Source/DataStructures/LinkedLists/EmptyIntegerSinglyLinkedListTest.cpp)

SET(ENTRY_POINT
		Source/Main.cpp)

ADD_EXECUTABLE(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES} ${ENTRY_POINT})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/Include/)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE ${CORE_PROJECT_NAME})

FIND_PACKAGE(GTest REQUIRED)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE GTest::gtest GTest::gmock)