CMAKE_MINIMUM_REQUIRED(VERSION ${CMAKE_MINIMUM_REQUIRED_VERSION})

PROJECT(${TEST_PROJECT_NAME} VERSION ${VERSION} LANGUAGES CXX)

SET(ENTRY_POINT
		Source/Main.cpp)

ADD_EXECUTABLE(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES} ${ENTRY_POINT})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/Include/)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE ${CORE_PROJECT_NAME})

FIND_PACKAGE(GTest REQUIRED)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE GTest::gtest GTest::gmock)

ADD_SUBDIRECTORY(Include)
ADD_SUBDIRECTORY(Source)